--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 VITE_GLOBAL_API = "https://cors.status.org.cn/uptimerobot/v2/getMonitors" # 第三方反代
 
 # UptimeRobot Api Keys
-VITE_API_KEY = "ur1022423-0c6e6a9d9b9a3908e798d9d6"
+VITE_API_KEY = "ur2534200-bfdfdf847add30db046c31ba"
 
 # 站点信息
 VITE_SITE_NAME = "IMSYY 站点监测"
@@ -13,7 +13,7 @@ VITE_SITE_DES = "一个简约的站点监测"
 
 # ICP 备案
 ## 若不需要可不填
-VITE_SITE_ICP = "豫ICP备2022018134号-1"
+VITE_SITE_ICP = ""
 
 # 日志天数
 VITE_COUNT_DAYS = 60
