--- a/.env
+++ b/.env
@@ -22,10 +22,10 @@ VITE_COUNT_DAYS = 60
 VITE_SHOW_LINKS = true
 
 # GitHub 链接
-#VITE_GITHUB_NAME = "imsyy"
+VITE_GITHUB_NAME = "imsyy"
 
 # 主页链接
-#VITE_HOME_URL = "https://www.imsyy.top/"
+VITE_HOME_URL = "https://www.imsyy.top/"
 
 # 邮箱地址
-#VITE_EMAIL_URL = "one@imsyy.top"
+VITE_EMAIL_URL = "one@imsyy.top"
