--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ VITE_SITE_DES = "Site Mon"
 VITE_COUNT_DAYS = 60
 
 # 站点链接外显
-VITE_SHOW_LINKS = true
+VITE_SHOW_LINKS = false
 
 # GitHub 链接
 VITE_GITHUB_NAME = ""
