--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ VITE_SITE_DES = "Site Mon"
 
 # ICP 备案
 ## 若不需要可不填
-#VITE_SITE_ICP = ""
+VITE_SITE_ICP = "豫ICP备2022018134号-1"
 
 # 日志天数
 VITE_COUNT_DAYS = 60
@@ -22,10 +22,10 @@ VITE_COUNT_DAYS = 60
 VITE_SHOW_LINKS = false
 
 # GitHub 链接
-VITE_GITHUB_NAME = ""
+VITE_GITHUB_NAME = "imsyy"
 
 # 主页链接
-VITE_HOME_URL = ""
+VITE_HOME_URL = "https://www.imsyy.top/"
 
 # 邮箱地址
-VITE_EMAIL_URL = ""
+VITE_EMAIL_URL = "one@imsyy.top"
